# pybind-example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/pybind_project_example/: __init__.py
src/: main.cpp
